--- a/POS/static/ngTemplates/app.POS.invoicesinfo.form.html
+++ b/POS/static/ngTemplates/app.POS.invoicesinfo.form.html
@@ -1,9 +1,9 @@
 
 
 <div class="modal-header">
-  Invoice  Info
+  Invoice Info
 
-    <a class="btn btn-default pull-right"  target="_blank" href="/api/POS/invoicePrint/?invoice={{form.pk}}" ng-if="invoice.customer.pk!=none"><i class="fa fa-print" ></i></a>
+    <a class="btn btn-default pull-right"  target="_blank" href="/api/POS/invoicePrint/?invoice={{form.pk}}"><i class="fa fa-print" ></i></a>
 
 </div>
 <div class="modal-body">
