--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -2,7 +2,7 @@
   <div class="col-md-8 col-md-offset-2 hidden-xs hidden-sm">
     <div ng-repeat="l in listingProducts">
       <div class="col-md-3 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
-        <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk})">
+        <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.replace(' ','-')})">
           <div class="row">
             <img style="width: 100%; height:120px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
             <img style="width: 100%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
