--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-white" style="position:relative; width:100%; bottom:0px; padding:20px;padding-top:0px">
+<div class="container-fluid bg-white" style="position:relative; width:100%; bottom:0px; padding:20px;padding-top:0px;margin-top:20px">
   <div class="row" style="border-top:3px solid #eeeeee;border-bottom:3px solid #eeeeee">
     <div class="col-md-12">
       <div class="col-md-4" style="border-right:3px solid #eeeeee;">
