--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -94,7 +94,7 @@
                   <span> <strong>Product</strong> </span>
                 </div>
                 <div class="col-md-offset-3 col-md-3 text-center">
-                  <strong >Price</strong>
+                  <strong style="padding-left:50px">Price</strong>
                 </div>
                 <div class="col-md-offset-1 col-md-1">
                   <strong>Qty</strong>
