--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -59,7 +59,7 @@
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'faq'})">FAQ</span>
     </div>
     <div class="col-md-3 text-center">
-      <strong style="font-size:15px;">ECOMMERCE</strong><br>
+      <strong style="font-size:15px;">STERLING SELECT</strong><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'contactUs'})"> Contact Us </span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'about'})">About us</span> <br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'})">Careers</span> <br>
@@ -113,7 +113,7 @@
     </div>
 
     <div class="col-xs-6 text-center">
-      <strong style="font-size:12px;">ECOMMERCE</strong><br>
+      <strong style="font-size:12px;">STERLING SELECT</strong><br>
       <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'contactUs'})"> Contact Us </span><br>
       <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'about'})">About us</span> <br>
       <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'careers'})">Careers</span> <br>
