--- a/POS/static/ngTemplates/app.POS.productMetaForm.html
+++ b/POS/static/ngTemplates/app.POS.productMetaForm.html
@@ -1,8 +1,8 @@
 <div class="container-fluid" ng-controller="controller.POS.productMeta.form">
   <div class="row">
     <div class="col-md-6">
-      <h3 ng-if="configureForm.pk">Edit product Meta : {{configureForm.description}}</h3>
-      <h3 ng-if="!configureForm.pk">Create product Meta</h3>
+      <h3 ng-if="configureForm.pk">Edit Product Meta : {{configureForm.description}}</h3>
+      <h3 ng-if="!configureForm.pk">Create Product Meta</h3>
       <div class="form-group">
         <label>Description</label>
         <input type="text" class="form-control" ng-model="configureForm.description">
@@ -24,7 +24,7 @@
       </div>
       <div class="btn-group btn-group-sm">
         <button type="button" class="btn btn-success" ng-click="saveproductMeta()">Save</button>
-        <button type="button" class="btn btn-default" ng-click="resetForm()">Save</button>
+        <button type="button" class="btn btn-danger" ng-click="resetForm()">Reset</button>
       </div>
     </div>
   </div>
