--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -53,8 +53,8 @@
       <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/appStore.png" alt="" /></a>
     </div>
     <div class="col-md-3 {{settings.playstoreLink.indexOf('http')==-1 && settings.appstoreLink.indexOf('http')==-1 ? 'col-md-offset-2 col-md-offset-1' :''}}">
-      <strong style="font-size:15px;">HELP</strong><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'payment'})"> Payment </span><br>
+      <strong style="font-size:15px;"><img src="/static/images/sterlin_select.png" style="height:5vh;" alt="Logo"></strong><br>
+      <span style="cursor:pointer;" ng-click="$state.go('sterlingSelect.in' , {title : 'payment'})"> Payment </span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'cancellationAndRefund'})">Cancellations and Returns</span> <br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'faq'})">FAQ</span>
     </div>
@@ -62,7 +62,7 @@
       <strong style="font-size:15px;">STERLING SELECT</strong><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'contactUs'})"> Contact Us </span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'about'})">About us</span> <br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'})">Careers</span> <br>
+      <!-- <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'})">Careers</span> <br> -->
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'press'})">Press</span>
     </div>
     <div class="col-md-4 text-right">
@@ -106,8 +106,8 @@
     </div> -->
 
     <div class="col-xs-6 text-center">
-      <strong style="font-size:12px;">HELP</strong><br>
-      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'payment'})"> Payment </span><br>
+      <strong style="font-size:12px;"><img src="/static/images/sterlin_select.png" style="height:5vh;" alt="Logo"></strong><br>
+      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('sterlingSelect.in' , {title : 'payment'})"> Payment </span><br>
       <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'cancellationAndRefund'})">Cancellationa and Returns</span> <br>
       <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'faq'})">FAQ</span>
     </div>
