--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -53,17 +53,18 @@
       <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/appStore.png" alt="" /></a>
     </div>
     <div class="col-md-3 {{settings.playstoreLink.indexOf('http')==-1 && settings.appstoreLink.indexOf('http')==-1 ? 'col-md-offset-2 col-md-offset-1' :''}}">
-      <strong style="font-size:15px;"><img src="/static/images/sterlin_select.png" style="height:5vh;" alt="Logo"></strong><br>
-      <span style="cursor:pointer;" ng-click="$state.go('sterlingSelect.in' , {title : 'payment'})"> Payment </span><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'cancellationAndRefund'})">Cancellations and Returns</span> <br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'faq'})">FAQ</span>
+      <img src="/static/images/sterlin_select.png" style="height:7vh;" alt="Logo"><br><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-')})">Payment</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-')})">Cancellations and Returns</span>
     </div>
     <div class="col-md-3 text-center">
       <strong style="font-size:15px;">STERLING SELECT</strong><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'contactUs'})"> Contact Us </span><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'about'})">About us</span> <br>
-      <!-- <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'})">Careers</span> <br> -->
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'press'})">Press</span>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-')})">Contact Us</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-')})">About us</span> <br>
+      <!-- <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-')})">Careers</span> <br> -->
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-')})">Press</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-')})">FAQ</span>
+
     </div>
     <div class="col-md-4 text-right">
       <div class="row">
@@ -106,18 +107,18 @@
     </div> -->
 
     <div class="col-xs-6 text-center">
-      <strong style="font-size:12px;"><img src="/static/images/sterlin_select.png" style="height:5vh;" alt="Logo"></strong><br>
-      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('sterlingSelect.in' , {title : 'payment'})"> Payment </span><br>
-      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'cancellationAndRefund'})">Cancellationa and Returns</span> <br>
-      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'faq'})">FAQ</span>
+      <img src="/static/images/sterlin_select.png" style="height:7vh;" alt="Logo"><br><br>
+      <span style="cursor:pointer;font-size:12px" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-')})">Payment</span><br>
+      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-')})">Cancellationa and Returns</span>
     </div>
 
     <div class="col-xs-6 text-center">
       <strong style="font-size:12px;">STERLING SELECT</strong><br>
-      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'contactUs'})"> Contact Us </span><br>
-      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'about'})">About us</span> <br>
-      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'careers'})">Careers</span> <br>
-      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'press'})">Press</span>
+      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-')})">Contact Us</span><br>
+      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-')})">About us</span> <br>
+      <!-- <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-')})">Careers</span> <br> -->
+      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-')})">Press</span><br>
+      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-')})">FAQ</span>
     </div>
 
     <div class="col-xs-12 text-center">
