--- a/ecommerce/static/ngTemplates/app.ecommerce.vendors.pages.items.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendors.pages.items.html
@@ -3,7 +3,7 @@
     <div class="row" style="border-bottom: 1px solid #dedede;height:70px;">
       <div class="col-md-12">
         <div class="row text-center">
-          <h3>{{data.pageurl}}</h3>
+          <h3>{{data.title}}</h3>
         </div>
       </div>
     </div>
