--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -5,15 +5,15 @@
   </div>
 
   <div style="padding-top:1.5vh;" class="hidden-xs hidden-sm">
-    <div class="col-xs-5" style="padding:0px;">
+    <div class="col-xs-6" style="padding:0px;">
       <!-- <input type="text" class="" style="width:100%;color: #000;text-indent: 10px;outline: none;" placeholder="Search for products, brands and more.."> -->
       <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="Search for products, brands and more..">
     </div>
-    <div class="col-xs-1 text-center" style="padding:0px;">
+    <!-- <div class="col-xs-1 text-center" style="padding:0px;">
       <div style="width:50px;height:29px;padding-top:3px;background-color:#e2e2e2;color:grey; cursor:pointer;" ng-click="search()">
         <i class="fa fa-search"></i>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <div class="col-md-1 text-center dropdown hidden-xs hidden-sm">
@@ -58,16 +58,16 @@
   </div>
 
 </div>
-<div class="row bg-blue ecomNav hidden-lg hidden-md" style="padding-bottom:10px; height:7vh" >
-  <div class="col-xs-10" style="padding-right:0px; padding-left:0px;">
+<div class="row bg-blue ecomNav hidden-lg hidden-md " style="padding-bottom:10px;width:100%" >
+  <div class="col-xs-12" style="padding-right:0px; padding-left:0px;">
     <!-- <input type="text" class="" style="width:100%;color: #000;text-indent: 10px;outline: none;" placeholder="Search for products, brands and more.."> -->
     <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="Products, brands and more..">
   </div>
-  <div class="col-xs-2 text-center" style="padding:0px;">
+  <!-- <div class="col-xs-2 text-center" style="padding:0px;">
     <div style="width:100%;height:29px;padding-top:3px;background-color:#e2e2e2;color:grey; cursor:pointer;" ng-click="search()">
       <i class="fa fa-search"></i>
     </div>
-  </div>
+  </div> -->
 </div>
 
 
