--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -95,6 +95,12 @@
       <div class="form-group">
         <i class="fa fa-desktop"></i> &nbsp; <label>Window Colour</label> &nbsp;<input type="color" ng-model="cpForm.windowColor">
       </div>
+      <div class="form-group">
+        <i class="fa fa-phone"></i> &nbsp; <label>Call Back</label> &nbsp;<input type="checkbox" ng-model="cpForm.callBack">
+      </div>
+      <div class="form-group">
+        <i class="fa fa-ticket"></i> &nbsp; <label>Ticket</label> &nbsp;<input type="checkbox" ng-model="cpForm.ticket">
+      </div>
     </div><br>
     <button type="button" class="btn btn-primary btn-lg col-md-2 col-md-offset-5" ng-click="saveCustomerProfile()">Save</button>
   </div>
