--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -34,7 +34,7 @@
                         <span> {{x.uid.split("$")[1]}}</span>
                       </div>
                       <div class="row">
-                        <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i>  <span >{{x.name}}</span>
+                        <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i>  <span >{{x.uid}}</span>
                       </div>
                     </div>
                   </div>
@@ -58,7 +58,7 @@
         </div>
           <ul class="nav nav-sidebar-inverse" style="width:100%;">
             <!-- <li ng-repeat="x in newUsers" ng-click="data.xInView = $index" class="ripple "> -->
-            <li ng-repeat="x in newUsers" mwl-confirm title="Confirm" message="Do you want to assign this user to yourself?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="assignUser($index)" confirm-button-type="btn btn-success" cancel-button-type="btn btn-danger" class="ripple">
+            <li ng-repeat="x in newUsers" mwl-confirm title="Confirm" message="Do you want to assign this user to yourself?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="assignUser($index , x.uid)" confirm-button-type="btn btn-success" cancel-button-type="btn btn-danger" class="ripple">
               <a>
                 <div class="row" style="cursor:pointer" >
                   <div class="container-fluid">
@@ -67,7 +67,7 @@
                         <span >{{x.uid.split("$")[1]}}</span>
                       </div>
                       <div class="row">
-                        <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i><span> {{x.name}}</span>
+                        <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i><span> {{x.uid}}</span>
                         <span>( {{x.messages.length}} )</span>
                       </div>
                     </div>
