--- a/POS/static/ngTemplates/app.POS.invoices.form.html
+++ b/POS/static/ngTemplates/app.POS.invoices.form.html
@@ -117,7 +117,7 @@
     <div class="col-md-2 pull-right">
       <div class="form-group">
         <label>Amount Recieved</label>
-        <input type="number" class="form-control" ng-model="form.amountRecieved">
+        <input type="number" min="0" class="form-control" ng-model="form.amountRecieved">
       </div>
       <div class="form-group">
         <label>Payment Ref. Number</label>
