--- a/POS/static/ngTemplates/app.POS.invoicesinfo.form.html
+++ b/POS/static/ngTemplates/app.POS.invoicesinfo.form.html
@@ -105,7 +105,7 @@
             </div>
             <div class="form-group">
               <label>Amount Recieved</label>
-              <input type="number" class="form-control" ng-model="invoice.amountRecieved">
+              <input type="number" min="0" class="form-control" ng-model="invoice.amountRecieved">
             </div>
             <div class="form-group">
               <label>Reference Number</label>
