--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -67,6 +67,14 @@
         <h4><i class="fa fa-bar-chart-o"></i> &nbsp; VR &nbsp;<i class="fa {{custDetails.vr?'fa-check':'fa-times'}}" style="color:{{custDetails.vr?'green':'red'}}"></i></i></h4><br>
         <h4><i class="fa fa-phone"></i> &nbsp; Call Back &nbsp;<i class="fa {{custDetails.callBack?'fa-check':'fa-times'}}" style="color:{{custDetails.callBack?'green':'red'}}"></i></i></h4><br>
         <h4><i class="fa fa-ticket"></i> &nbsp; Ticket &nbsp;<i class="fa {{custDetails.ticket?'fa-check':'fa-times'}}" style="color:{{custDetails.ticket?'green':'red'}}"></i></i></h4><br>
+        <div class="row" ng-if="custDetails.name.length>0" style="padding-left:10px">
+          <div class="col-md-5">
+            <h4><i class="fa fa-desktop"></i> &nbsp; Name </h4>
+          </div>
+          <div class="col-md-3" style="margin-top:10px">
+            <h3> {{custDetails.name}}  </h3>
+          </div>
+        </div><br>
       </div>
     </div>
   </div>
