--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -101,6 +101,12 @@
       <div class="form-group">
         <i class="fa fa-ticket"></i> &nbsp; <label>Ticket</label> &nbsp;<input type="checkbox" ng-model="cpForm.ticket">
       </div>
+      <div class="form-group">
+        <i class="fa fa-user"></i> &nbsp; <label>Name</label> &nbsp;<input type="text" ng-model="cpForm.name">
+      </div>
+      <div class="form-group">
+        <i class="fa fa-user"></i> &nbsp; <label>Picture</label> &nbsp;<input type="file" ng-model="cpForm.dp">
+      </div>
     </div><br>
     <button type="button" class="btn btn-primary btn-lg col-md-2 col-md-offset-5" ng-click="saveCustomerProfile()">Save</button>
   </div>
