--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -6,7 +6,7 @@
       <div class="form-group">
         <label> Select Date </label>
         <div class="input-group">
-          <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="logger.when" is-open="status.opened" />
+          <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
           <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
@@ -16,7 +16,12 @@
     <div class="col-md-offset-1 col-md-3">
       <div class="form-group">
         <label> Agent Name </label>
-        <input type="text" class="form-control"  placeholder="Search and select">
+        <input type="text" class="form-control"  placeholder="Search and select" uib-typeahead="user as user.username for user in userSearch($viewValue)" ng-model="form.user">
+      </div>
+    </div>
+    <div class="col-md-offset-1  col-md-1" style="padding-top:20px">
+      <div class="btn btn-primary btn-block" ng-click="filterData()">
+        <strong>Filter</strong>
       </div>
     </div>
   </div>
@@ -30,7 +35,27 @@
           <i class="fa fa-list-ul"></i>
         </uib-tab-heading>
         <div class="container-fluid">
-          <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
+          <!-- <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table> -->
+          <div class="row" style="padding-top:25px">
+
+            <div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-repeat="data in reviewData">
+              <div class="container-fluid card" style="padding-bottom:10px;">
+                <div class="row container-fluid" style="border-bottom: 1px solid #dedede;height:70px">
+                  <div class="col-md-12">
+                    <h4>Agent Name : {{data[0].user_id | getName}}</h4>
+                    <h4>UID : {{data[0].uid}}</h4>
+                  </div>
+                </div>
+                <div class="row container-fluid" style="padding-top:10px;height:50px;">
+                  <div class="col-md-12">
+                    <h4>Date: {{data[0].created | date : 'dd-MMM-yyyy hh:mm:a'}}
+                      <span class="pull-right" style="cursor:pointer;"><i class="fa fa-info-circle fa-lg" ng-click="tableAction($index)"></i></span>
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </uib-tab>
 
@@ -42,8 +67,8 @@
         <div ng-if="tab.app == 'companyEdit'">
           <div ng-include="'/static/ngTemplates/app.customers.form.html'"></div>
         </div>
-        <div ng-if="tab.app == 'companyInfo'">
-          <div ng-include="'/static/ngTemplates/app.customers.explore.html'"></div>
+        <div ng-if="tab.app == 'AgentInfo'">
+          <div ng-include="'/static/ngTemplates/app.reviews.explore.html'"></div>
         </div>
       </uib-tab>
 
